created cat repository, cat service, cat handler, done CRUD operations for cat
